--- a/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
+++ b/src/shared/components/cards/card-bar-evidencia/card-bar-evidencia.component.html
@@ -44,9 +44,9 @@
                 <!-- fomulario -->
                 <div >
                     <form [formGroup]="EvidenciaForm" (ngSubmit)="submit()">
-                      <div class="grid gap-4 grid-cols-2">
+                      <div class="grid grid-cols-3 gap-4">
                         <div>
-                            <label class="lavel" for="areasadscripcionSelect">Selecciona un área de adscripción:</label>
+                            <label class="lavel" for="areasadscripcionSelect">Selecciona área de adscripción:</label>
                             <select class="select" id="areasadscripcionSelect" (change)="filtrarArea($event, 'areasadscripcion')">
                               <option value="">Selecciona un valor</option>
                               <option *ngFor="let area of areasadscripcion" [value]="area.id">{{ area.nombre }}</option>
@@ -80,20 +80,9 @@
                               </div>
                             </div>
                         </div>
+                        
                         <div>
-                          <img class="img" *ngIf="EvidenciaForm.get('Foto')?.value" [src]="EvidenciaForm.get('Foto')?.value" width="50%" height="50%" alt="Vista previa de la imagen">
-
-                          <label for="Foto" class="lavel">Evidencia fotográfica*:</label>
-                          <input class="input" type="file" (change)="onFileChange($event)" formControlName="Foto">
-                          
-                          <div *ngIf="EvidenciaForm.get('Foto')?.touched" class="error-message">
-                            <div *ngIf="EvidenciaForm.get('Foto')?.hasError('required')">
-                              La evidencia es requerida
-                            </div>
-                          </div> 
-                        </div>
-                        <div>
-                          <label for="Descripcion" class="lavel">Descripción*:</label>
+                          <label for="Descripcion" class="lavel">Descripcion*:</label>
                               <textarea id="Descripcion" name="Descripcion" rows="2" class="custom-textarea" formControlName="Descripcion"></textarea>                                       
                               <div *ngIf="EvidenciaForm.get('Descripcion')?.touched" class="error-message">
                                   <div *ngIf="EvidenciaForm.get('Descripcion')?.hasError('required')">
@@ -104,12 +93,28 @@
                                   </div>
                               </div>
                         </div>
+                        <div>
+                          <label for="Foto" class="lavel">Evidencia fotografica*:</label>
+                          <input class="input" type="file" (change)="onFileChange($event)" formControlName="Foto">
+                          
+                          <div *ngIf="EvidenciaForm.get('Foto')?.touched" class="error-message">
+                            <div *ngIf="EvidenciaForm.get('Foto')?.hasError('required')">
+                              La evidencia es requerida
+                            </div>
+                          </div> 
+                        </div>
+                        <div>
+                          <img class="img" *ngIf="EvidenciaForm.get('Foto')?.value" [src]="EvidenciaForm.get('Foto')?.value" width="100%" height="100%" alt="Vista previa de la imagen">
+                        </div>
                       </div>
+                      
                           <br>      
                           Todos los campos marcados con * son requeridos
                           <div class="flex justify-end">
-                            <button type="submit" class="bg-purple-900 text-white py-2 px-4 rounded-md hover:bg-red-950" >
-                              {{ isUpdating ? "Actualizar " : "Agregar" }}
+                            <button  [disabled]="!EvidenciaForm.valid"
+                            [ngClass]="{'bg-gray-500': !EvidenciaForm.valid, 'bg-purple-900': EvidenciaForm.valid}"
+                            class="text-white py-2 px-4 rounded-md hover:bg-red-950 custom-button">
+                              {{ isUpdating ? "ACTUALIZAR " : "AGREGAR " }}
                             </button>
                           </div>
                           
@@ -129,7 +134,7 @@
 </div>
 <div class="block w-full overflow-x-auto">
     <table class="items-center w-full bg-transparent border-collapse">
-      <thead class="table-header">
+      <thead>
         <tr>
           <th class="table-header">
             #
@@ -144,7 +149,7 @@
           <th
           class="table-header"
           >
-              Descripción
+              Descripcion
           </th>
           <th
           class="table-header"
@@ -153,35 +158,33 @@
           </th>
         </tr>
       </thead>
-      <tbody class="custom-th">
-      
-      
-        <tr class="custom-tr">
-        <th
-            class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+      <tbody>
+        <tr >
+          <th
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
           >
             1
           </th>
           <th
-            class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-          > 
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
+          >
             Alejandro	Martinez	Hdez
           </th>
           <td
-            class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
           >
             Foto
           </td>
           <td
-            class="border-t-0 px-6 align-middle text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-semibold"
           >
-            Descripción 1
+            Descripcion 1
           </td>
           <td
-            class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
+            class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
           >
           <button >
-            <svg xmlns="http://www.w3.org/2000/svg"  text-center class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+            <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M4 7l16 0" />
               <path d="M10 11l0 6" />
@@ -201,52 +204,7 @@
           </td>
 
         </tr>
-        <!--  <tr class="custom-tr" *ngFor="let beneficiario of beneficiarios; let i = index"  [ngClass]="{'bg-gray-100': i % 2 === 0, 'bg-white': i % 2 !== 0, 'custom-table-row': true}">ESTILO table YENNI-->
-        <tr class="custom-tr">
-          <th
-              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-            >
-              2
-            </th>
-            <th
-              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-            > 
-              prueba
-            </th>
-            <td
-              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-            >
-              Foto
-            </td>
-            <td
-              class="border-t-0 px-6 align-middle text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4 font-normal"
-            >
-              Descripción 1
-            </td>
-            <td
-              class="border-t-0 px-6 align-middle  text-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4"
-            >
-            <button >
-              <svg xmlns="http://www.w3.org/2000/svg"  text-center class="icon icon-tabler icon-tabler-trash" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M4 7l16 0" />
-                <path d="M10 11l0 6" />
-                <path d="M14 11l0 6" />
-                <path d="M5 7l1 12a2 2 0 0 0 2 2h8a2 2 0 0 0 2 -2l1 -12" />
-                <path d="M9 7v-3a1 1 0 0 1 1 -1h4a1 1 0 0 1 1 1v3" />
-              </svg>
-            </button>
-            <button class="ml-4" >
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-edit" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
-                <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
-                <path d="M16 5l3 3" />
-              </svg>
-            </button>
-            </td>
-  
-          </tr>
+        
       </tbody>
     </table>
 
