--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.css
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.css
@@ -26,3 +26,38 @@
     display: inline-block;
     border: 2px solid white; 
   }  
+  .lavel {
+    display: block;
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #4a5568;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  
+.select {
+  background-color: #f7fafc;
+  border: 1px solid #e2e8f0;
+  color: #1a202c;
+  font-size: 0.875rem;
+  border-radius: 0.375rem;
+  padding: 0.625rem;
+  display: block;
+  width: 100%;
+}
+
+.select:focus {
+  outline: none;
+  border-color: #4299e1;
+  box-shadow: 0 0 0 3px rgba(66, 153, 225, 0.5);
+}
+
+.select option {
+  background-color: #ffffff;
+  color: #1a202c;
+}
+
+.select option:checked {
+  background-color: #4299e1;
+  color: #ffffff;
+}
