--- a/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
+++ b/src/shared/components/cards/card-bar-mapa/card-bar-mapa.component.html
@@ -1,28 +1,50 @@
-<div class="flex flex-wrap">
-    <div class="w-full px-4 map-container">
-      <div
-        class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded"
-      >
-        <div
-          id="map-canvas"
-          class="relative w-full rounded h-400-px md:h-600-px lg:h-800-px"
-          data-lat="19.34889526616767"
-          data-lng="-98.19011296839722"
-        ></div>
+<div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded">
+  <div class="rounded-t mb-0 px-4 py-3 border-0">
+    <div>
+      <label class="label" for="programaSocialSelect1">Selecciona un programa social:</label>
+      <select class="select" id="programaSocialSelect1" (change)="filtrarPorPrograma($event)">
+        <option>{{ select }}</option>
+        <option *ngFor="let programaSocial of prograsmasocial" [value]="programaSocial.id">{{programaSocial.nombre}}</option>
+      </select>
       </div>
-    </div>
-    <div class="max-w-sm mx-auto bg-white rounded overflow-hidden shadow-lg my-4" style="
-    border-right-width: 10px; width: 250px; height:60px;" *ngFor="let programa of prograsmasocial;">
-      <div class="px-6 py-4 text-center">
-        <div class="mb-2">
-          <div class="flex items-center justify-center">
-            <div class="color-circle h-8 w-8 mr-3" [style.backgroundColor]="programa.color"></div>
-            <div>
-              <div class="font-bold text-xl">{{ programa.nombre }}</div>
+      <br>
+      <button class="bg-green-500 text-white font-bold py-2 px-4 rounded" (click)="mapa()" style="cursor: pointer; background-color: #34D399; border: none; border-radius: 4px;">
+        Todos los Beneficiarios
+      </button>
+      <br>
+      <br>
+
+
+      <div class="flex flex-wrap">
+        <div class="w-full px-4 map-container">
+          <div
+            class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded"
+          >
+            <div
+              id="map-canvas"
+              class="relative w-full rounded h-400-px md:h-600-px lg:h-800-px"
+              data-lat="19.34889526616767"
+              data-lng="-98.19011296839722"
+            ></div>
+          </div>
+        </div>
+        <div class="max-w-sm mx-auto bg-white rounded overflow-hidden shadow-lg my-4" style="
+        border-right-width: 10px; width: 300px; height:80px;" *ngFor="let programa of prograsmasocial;">
+          <div class="px-6 py-4 text-center">
+            <div class="mb-2">
+              <div class="flex items-center justify-center">
+                <div class="color-circle h-8 w-8 mr-3" [style.backgroundColor]="programa.color"></div>
+                <div>
+                  <div class="text-xl">{{ programa.nombre }}</div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+
+
+  </div>
+</div>
+
     
     
